Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,16 @@ stages:
         containerRegistry: 'MYNEWDOCKER'
         command: 'build'
         Dockerfile: '**/Dockerfile'
+
+- stage: PushDockerImage
+  displayName: Pushing-image
+  jobs:
+  - job: Pushjob
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'MYNEWDOCKER'
+        repository: 'venuchgit/reacjsapp'
+        command: 'push'
